--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -2,7 +2,7 @@
   "domain": "icloud3",
   "name": "iCloud3 Device Tracker",
   "documentation": "https://gcobb321.github.io/icloud3/#/",
-  "dependencies": [],
+  "hdependencies": [],
   "codeowners": ["@gcobb321"],
   "requirements": []
 }
