--- a/custom_components/icloud3/config_ic3_sample.yaml
+++ b/custom_components/icloud3/config_ic3_sample.yaml
@@ -5,7 +5,7 @@
 #   These parameters will override those specified in the HA
 #   configuration.yaml file. They can be used to change the
 #   iCloud3 operations without restarting HA. To do this,
-#   change the parameter in this file and select 
+#   change the parameter in this file and select
 #   Event Log > Actions > Restart iC3
 #
 ###########################################################
@@ -27,14 +27,14 @@
 #    iosapp_entity: gary_iphone_app
 #    track_from_zone: warehouse
 
-#event_log_card_directory: 'www/custom_cards'
+#event_log_card_directory: www/custom_cards
 
 # --Zone/Tracking Parameters--------------------------------
-#inzone_interval: '60 min'
-#max_interval: '4 hrs'
+#inzone_interval: 60 min
+#max_interval: 4 hrs
 #center_in_zone: true
-#stationary_inzone_interval: '30 min'
-#stationary_still_time: '8 min'
+#stationary_inzone_interval: 30 min
+#stationary_still_time: 8 min
 #stationary_zone_offset: 1, 0
 #travel_time_factor: .6
 #distance_method: waze
@@ -50,7 +50,7 @@
 # --Accuracy Parameters-------------------------------------
 #gps_accuracy_threshold: 100
 #ignore_gps_accuracy_inzone: True
-#old_location_threshold: '3 min'
+#old_location_threshold: 3 min
 
 # --Waze Parameters-----------------------------------------
 #distance_method: waze
