--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -2,7 +2,9 @@
   "domain": "icloud3",
   "name": "iCloud3 Device Tracker",
   "documentation": "https://gcobb321.github.io/icloud3/#/",
+  "issue_tracker": "https://github.com/gcobb321/icloud3/issues",
   "hdependencies": [],
   "codeowners": ["@gcobb321"],
-  "requirements": []
+  "requirements": [],
+  "version": "2.3.5"
 }
