--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "icloud3",
-  "name": "iCloud3 Device Tracker",
+  "name": "iCloud3 Device Tracker, Version 2",
   "documentation": "https://gcobb321.github.io/icloud3/#/",
   "issue_tracker": "https://github.com/gcobb321/icloud3/issues",
   "dependencies": [],
