--- a/custom_components/icloud3/manifest.json
+++ b/custom_components/icloud3/manifest.json
@@ -9,6 +9,6 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/gcobb321/icloud3/issues",
   "loggers": ["icloud3"],
-  "requirements": ["srp"],
-  "version": "3.2.4.2"
+  "requirements": ["srp", "fido2"],
+  "version": "3.3"
 }
